--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,95 @@
-body {
+/* Main breaking points 850px 550px, different breaking points for Services section since boxes would otherwise stretch too much */
+/* Your website looks like shit sir */
+
+/* General Section */
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: system-ui;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  color: black;
 }
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+button {
+  color: unset;
+}
+
+section {
+  padding: 50px 0;
+  line-height: 40px;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.section-header {
+  font-weight: 900;
+  font-size: 2.5em;
+}
+
+.section-description {
+  max-width: 1000px;
+  line-height: 30px;
+  padding: 15px;
+}
+
+.header-line {
+  width: 100px;
+  background-color: var(--main-red);
+  height: 1px;
+  margin-top: 10px;
+}
+
+.header-line:first-of-type {
+  width: 50px;
+  margin-top: 15px;
+}
+
+.home-btn {
+  padding: 2.5px 50px;
+}
+
+.container {
+  margin: 0 2em;
+}
+
+@media (max-width: 550px) {
+  .container {
+    margin: 0 1em;
+  }
+}
+/* Main Colors */
+
+:root {
+  --light-gray: rgb(240, 240, 240);
+  --dark-gray: rgb(204, 204, 204);
+  --main-white: rgb(255, 255, 255);
+  --main-red: rgb(199, 53, 74);
+  --main-blue: rgb(53, 70, 126);
+  --main-black: #0f0f0f;
+}
+
+/* Other extra colors to try for main 
+#0b0c10 light black
+#1F2833 more gray
+#C5C6C7 lighter gray
+#D8C3A5 light beige kinda
+#8E8D8A darker than C5 gray lighter than 1F
+
+
+*/
