Changing bg attachment of testimonial slider to unset on 550px.

--- a/src/components/about-route/AboutRoute.css
+++ b/src/components/about-route/AboutRoute.css
@@ -189,6 +189,10 @@
     font-size: 0.9em;
   }
 
+  .about-route-testimonials {
+    background-attachment: unset;
+  }
+
   .swiper-text {
     line-height: 20px;
     padding: 0 5%;
