Made navbar scroll when active in case user can't see entire navbar and added z-index to scroll to top button so it appears under then nav.

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -123,6 +123,7 @@
     top: 0;
     background-color: rgba(0, 0, 0, 0.9);
     transition: all 0.5s;
+    overflow: scroll;
   }
 
   .nav-menu.active {
