--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,9 +1,6 @@
 /* Footer Section */
 .footer {
   background-color: var(--main-black);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   color: white;
   line-height: 30px;
 }
@@ -40,7 +37,7 @@
 .footer-menu {
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: flex-start;
 }
 
 .footer-link {
@@ -56,6 +53,12 @@
 
 .footer-react-icons {
   margin-right: 5px;
+}
+
+@media (min-width: 1750px) {
+  .footer-item {
+    padding: 5px 0;
+  }
 }
 
 @media (max-width: 450px) {
